fix breadcrumbs z-index

--- a/src/scss/layout/_breadcrumbs.scss
+++ b/src/scss/layout/_breadcrumbs.scss
@@ -1,7 +1,6 @@
 .breadcrumbs {
   display: block;
   position: relative;
-  z-index: 4;
 
   width: 100%;
   max-width: 100%;
