--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -5,9 +5,7 @@
 
   background-color: $color-background;
 
-  @media screen and (max-width: 1023px) {
-    &.header--underline {
-      border-bottom: solid 1px $color-light;
-    }
+  .header__breadcrumbs {
+    z-index: 5;
   }
 }
