--- a/src/scss/layout/_news.scss
+++ b/src/scss/layout/_news.scss
@@ -83,7 +83,7 @@
       font-size: .8125rem;
       color: $color-links;
 
-      transform: translateY(2px);
+      transform: translateY(1px);
     }
 
     @media screen and (max-width: 1023px) {
