--- a/src/scss/layout/_topline.scss
+++ b/src/scss/layout/_topline.scss
@@ -23,7 +23,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      z-index: 5;
+      z-index: 7;
       width: 100%;
     }
   }
@@ -41,7 +41,7 @@
       position: absolute;
       top: 1rem;
       left: 0;
-      z-index: 4;
+      z-index: 6;
 
       width: 100%;
       height: 5rem;
@@ -66,7 +66,7 @@
   .topline__button {
     display: none;
     position: relative;
-    z-index: 6;
+    z-index: 10;
 
     outline: none;
     cursor: pointer;
